Fixed percent format yet again

--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -120,7 +120,7 @@
                                     {% for currentUser in leagueUserData %}
                                     <tr>
                                         <td>{{ currentUser.username }}</td>
-                                        <td>{{ currentUser.pickPercentage }} %</td>
+                                        <td>{{ currentUser.pickPercentage }}</td>
                                     </tr>
                                     {% endfor %}
                                 </tbody>
