Removed extra - (dash) when player has lost points since the value is already negative

--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -70,7 +70,7 @@
                                         {% elif currentUser.weeklyGain == 0 %}
                                         <td class='text'>+{{ currentUser.weeklyGain }}</td>
                                         {% else %}
-                                        <td class='text-danger'>-{{ currentUser.weeklyGain }}</td>
+                                        <td class='text-danger'>{{ currentUser.weeklyGain }}</td>
                                         {% endif %}
                                     </tr>
                                     {% endfor %}
