Small ui updates - New font

--- a/bets/templates/bets/bets.html
+++ b/bets/templates/bets/bets.html
@@ -77,8 +77,8 @@
     <div class="col-lg-3 text-muted text-center">
         <h6>Home Spread</h6>
     </div>
-    <div class="col-lg-2 text-muted text-center p-0">
-        <button class="btn btn-light" data-toggle="modal" data-target="#deleteCOnfirm">Help</button>
+    <div class="col-lg-3 text-muted text-center p-0">
+        <button class="btn btn-light" data-toggle="modal" data-target="#deleteConfirm">Help</button>
     </div>
     <div class="col-lg-3 text-muted text-center">
         <h6>Away Spread</h6>
